--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -16,4 +16,13 @@ body{
     color:#fff;
     background-image: url(imagies/Background\(1\).jpg)
 }
-/*added css sheet*/
+.alingtable{
+    width: 55%;
+    margin-left: auto;
+    margin-right: auto;     
+}
+#head-profile{
+    border-radius: 50%;
+    float: right; 
+    margin-right: 100px;
+}
