Fixed CCSS on "whole" class

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -8,7 +8,9 @@ hr{
 	padding:2px;
     border-style:ridge;
     border-color:#fffb00;
-    width:980px;margin-right:auto;
+    width: 100%;
+    max-width:980px;
+    margin-right:auto;
     margin-left:auto;
     background-color: rgba(0,0,0,.5);
     border-radius: 25px;
