--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -22,10 +22,12 @@ body,html{
 }
 .bg{
     background-image: url(imagies/Background\(1\).jpg);
-    height: 100%;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    
 }
 .alingtable{
     width: 55%;
@@ -44,4 +46,15 @@ h2{
 }
 p{
     padding-left: 50px;
+}
+footer{
+    text-align: center;
+}
+h5{
+    text-decoration: solid;
+    padding-left: 50px;
+}
+h4{
+    text-decoration: solid;
+    text-align: center;
 }
