--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -27,7 +27,7 @@ body,html{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    
+    background-color: black;
 }
 .alingtable{
     width: 55%;
