--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -20,6 +20,10 @@ body,html{
     color:#fff;
     height: 100%;
 }
+.menu{
+    color: white;
+    font-weight: 700;
+}
 .bg{
     background-image: url(imagies/Background\(1\).jpg);
     min-height: 100vh;
@@ -57,4 +61,28 @@ h5{
 h4{
     text-decoration: solid;
     text-align: center;
+}
+table#mainTable{
+    border: 1px solid #fffb00;    
+    border-radius: 30px;
+    box-shadow: 1px 1px 1px #000001;
+    padding: 15px;
+    width: 50%;
+    margin: 0 auto;
+}
+.submit_btn{
+    padding: 10px 40px 10px 10px;
+    font-size: 16px;
+    background-color:transparent;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    border: 3px solid black;
+    cursor: pointer;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.submit_btn:hover{
+background: black;
+border: 3px solid white;
 }
